Add '26.4-snapshot-1' sources